--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -1,17 +1,38 @@
 <nav class="navbar navbar-static-top">
     <div class="container">
         <div class="navbar-header">
-            <fullstack-logo></fullstack-logo>
         </div>
-        <ul class="nav navbar-nav">
+        <!-- <ul class="nav navbar-nav">
             <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()">
                 <a ui-sref-active="active" ui-sref="{{ item.state }}">{{ item.label }}</a>
             </li>
-        </ul>
-        <button ng-show="!user" ui-sref="login" class="btn login-button">Login</button>
+        </ul> -->
+     <!--    <button ng-show="!user" ui-sref="login" class="btn login-button">Login</button>
         <div ng-show="user" class="welcome">
             <span>Welcome, {{ user.email }}!</span>
             <a ng-click="logout()">Logout</a>
+        </div> -->
+
+
+        <div class="navbar-nav btn nav-button">
+            <a ui-sref-active="active" ui-sref="home">Find Me</a>
         </div>
+
+        <!-- just a place-holder for now. change state to help -->
+        <!-- <div class="help btn nav-button">
+            <a ui-sref-active="active">Send Location</a>
+        </div> -->
+
+
+
+        <button ng-show="!sent" ng-click="sent = !sent" class="help btn nav-button">Send Location</button>
+
+        <div ng-show="sent" class="help">
+            <span>{{ locationLink }}</span>
+        </div>
+
+
+
+
     </div>
 </nav>
