--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,18 @@
 <section id="home">
-    <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting>
+    <!-- <fullstack-logo></fullstack-logo>
+    <rando-greeting></rando-greeting> -->
+
+    <div>
+        <h1>Welcome to Marco Polo!</h1>
+        <h3>Are you lost?</h3>
+    </div>
+
+
+    <div>
+        <button>
+            <span ui-ref="home">Marco!</span>
+        </button>
+    </div>
+
+
 </section>
